--- a/students/templates/students/course/certificate_template.html
+++ b/students/templates/students/course/certificate_template.html
@@ -332,7 +332,10 @@
   background:white'>&nbsp;</p>
 					<p class=MsoNormal align=center style='text-align:center'>
 						<img width=313 height=196 id="Picture1 9"
-							src="https://construction-safety-nyc.com/static/images/iacet.jpg"></p>
+							src="https://construction-safety-nyc.com/static/images/iacet.jpg">
+							<img width=399 height=196 id="Picture1 10"
+							src="https://construction-safety-nyc.com/static/images/osha_auth.jpg">
+							</p>
 				</td>
 			</tr>
 		</table>
