--- a/courses/templates/courses/course/list.html
+++ b/courses/templates/courses/course/list.html
@@ -62,6 +62,9 @@ All courses
             <div class="col-md-12">
                 <main class="page-content">
                     <div class="row">
+
+
+
                         {% for course in courses %}
                         {% with subject=course.subject %}
                         <div class="col-md-6 col-lg-4 mb-3 course-item">
@@ -71,7 +74,76 @@ All courses
                             <input type="hidden" name="price" value="{{course.price}}" />
                             <input type="hidden" name="discounted_price" value="{{course.discounted_price}}" />
                             <input type="hidden" name="modules" value="{{course.total_modules}}" />
-                            <div class="card home-course">
+
+
+                            <div class="single-courses-box mb-30">
+                                <div class="courses-image">
+                                    <a href="{% url 'course_detail' course.slug %}" class="d-block">
+
+                                        {% if course.image %}
+                                        <img src="{{course.image}}" alt="image">
+                                        {% else %}
+                                        <img src="https://via.placeholder.com/600x488.png?text={{course.title}}" alt="image">
+                                        {%endif%}
+
+                                    </a>
+                                    <div class="courses-tag">
+
+                                        {% if course.is_free%}
+                                        <a href="{% url 'course_detail' course.slug %}" class="d-block">
+                                            View Course
+                                        </a>
+                                        {% else %}
+                                        <a href="javascript:;" class="d-block link-add-cart"><i class="fa fa-plus"></i>
+                                            Add to
+                                            Cart</a>
+
+                                        {%endif%}
+                                    </div>
+                                </div>
+                                <div class="courses-content">
+                                    <div class="course-author d-flex1 align-items-center d-none">
+                                        <img src="https://templates.envytheme.com/raque/default/assets/img/user1.jpg"
+                                            class="rounded-circle mr-2" alt="image">
+                                        <span>Steven Smith</span>
+                                    </div>
+                                    <h3><a href="{% url 'course_detail' course.slug %}" class="d-inline-block">
+                                            {{ course.title |slice:"0:25"  }} ..
+                                        </a></h3>
+                                    <div class="courses-rating">
+
+                                        <div class="rating-total">
+                                            <a href="{% url 'course_list_subject' subject.slug %}"
+                                                class="text-info">{{subject}}</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="courses-box-footer">
+                                    <ul>
+                                        <li class="students-number">
+                                            <i class="bx bx-user"></i> {{ course.total_modules }} Modules
+                                        </li>
+                                        <li class="courses-lesson">
+                                            <i class="bx bx-book-open"></i>
+                                            {% if not course.is_free and course.discounted_price > 0 %}
+                                            <s>${{course.price}}</s>
+                                            {% endif %}
+                                        </li>
+                                        <li class="courses-price">
+                                            {% if course.is_free %}
+                                            Free
+                                            {%elif course.discounted_price > 0 %}
+                                            ${{course.discounted_price}}
+                                            {% else %}
+                                            ${{course.price}}
+                                            {% endif %}
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+
+
+                            <div class="card home-course d-none">
                                 <div class="card-body">
                                     <a href="{% url "course_detail" course.slug %}">
                                         <img class="card-img w-9 h-9 br-7 mb-4" src="/static/fe_v1/img/course.png"
@@ -81,7 +153,8 @@ All courses
                                         <a href="{% url "course_detail" course.slug %}" title="{{ course.title }}"
                                             class="text-dark">
                                             {{ course.title |slice:"0:30"  }} ..
-                                        </a> </h4>
+                                        </a>
+                                    </h4>
                                     <h6 class="card-subtitle mb-2 text-muted small">
                                         <a href="{% url "course_list_subject" subject.slug %}"
                                             class="text-info">{{subject}}</a>
@@ -127,6 +200,190 @@ All courses
 </div>
 {% endblock %}
 {% block scripts %}
+
+<style>
+    .single-courses-box {
+        background-color: #fff;
+        -webkit-box-shadow: 0 8px 16px 0 rgba(146, 184, 255, 0.2);
+        box-shadow: 0 8px 16px 0 rgba(146, 184, 255, 0.2);
+        border-radius: 5px 5px 0 0;
+        -webkit-transition: 0.5s;
+        transition: 0.5s;
+    }
+
+    .single-courses-box .courses-image {
+        border-radius: 5px 5px 0 0;
+        position: relative;
+    }
+
+    .single-courses-box .courses-image a img {
+        border-radius: 5px 5px 0 0;
+        width: 100%;
+    }
+
+    .single-courses-box .courses-image .courses-tag {
+        position: absolute;
+        right: 25px;
+        bottom: 0;
+        background-color: #fff;
+        border-radius: 5px 5px 0 0;
+        -webkit-transition: 0.5s;
+        transition: 0.5s;
+        padding-left: 15px;
+        padding-right: 15px;
+        padding-top: 5px;
+        padding-bottom: 5px;
+    }
+
+    .single-courses-box .courses-image .courses-tag a {
+        color: #0eb582;
+        font-weight: 500;
+    }
+
+    .single-courses-box .courses-content {
+        padding: 25px 25px 20px;
+    }
+
+    .single-courses-box .courses-content .course-author {
+        margin-bottom: 13px;
+    }
+
+    .single-courses-box .courses-content .course-author img {
+        width: 37px;
+        height: 37px;
+        margin-right: 8px;
+    }
+
+    .single-courses-box .courses-content .course-author span {
+        color: #252525;
+        font-size: 14.5px;
+        font-weight: 500;
+    }
+
+    .single-courses-box .courses-content h3 {
+        margin-bottom: 12px;
+        line-height: 1.5;
+        font-size: 22px;
+        font-weight: 600;
+    }
+
+    .single-courses-box .courses-content .courses-rating .review-stars-rated {
+        color: #f2b827;
+        display: inline-block;
+    }
+
+    .single-courses-box .courses-content .courses-rating .review-stars-rated i {
+        color: #f2b827;
+        font-size: 16px;
+        margin-right: -2px;
+    }
+
+    .single-courses-box .courses-content .courses-rating .rating-total {
+        display: inline-block;
+        position: relative;
+        top: -2px;
+        font-size: 13px;
+    }
+
+    .single-courses-box .courses-box-footer {
+        border-top: 1px solid #e2f4ff;
+        padding: 20px 25px;
+    }
+
+    .single-courses-box .courses-box-footer ul {
+        list-style-type: none;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        padding-left: 0;
+        -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center;
+        margin-bottom: 0;
+        margin-left: -7px;
+        margin-right: -7px;
+    }
+
+    .single-courses-box .courses-box-footer ul li {
+        color: #727695;
+        font-size: 15px;
+        padding-left: 7px;
+        padding-right: 7px;
+    }
+
+    .single-courses-box .courses-box-footer ul li i {
+        color: #252525;
+        position: relative;
+        top: 1px;
+    }
+
+    .single-courses-box .courses-box-footer ul li i.bx-book-open {
+        top: 1.3px;
+    }
+
+    .single-courses-box .courses-box-footer ul .students-number {
+        -webkit-box-flex: 0;
+        -ms-flex: 0 0 37%;
+        flex: 0 0 37%;
+        max-width: 37%;
+    }
+
+    .single-courses-box .courses-box-footer ul .courses-lesson {
+        -webkit-box-flex: 0;
+        -ms-flex: 0 0 34%;
+        flex: 0 0 34%;
+        max-width: 34%;
+    }
+
+    .single-courses-box .courses-box-footer ul .courses-price {
+        -webkit-box-flex: 0;
+        -ms-flex: 0 0 29%;
+        flex: 0 0 29%;
+        max-width: 29%;
+        text-align: right;
+        color: #ff1949;
+        font-size: 18px;
+        font-weight: 500;
+    }
+
+    .single-courses-box .courses-box-footer ul .courses-price span {
+        color: #81868a;
+        text-decoration: line-through;
+        font-size: 14px;
+        font-weight: 400;
+    }
+
+    .single-courses-box.without-box-shadow {
+        -webkit-box-shadow: unset;
+        box-shadow: unset;
+    }
+
+    .single-courses-box.without-box-shadow .courses-content {
+        padding: 25px 0 18px;
+    }
+
+    .single-courses-box.without-box-shadow .courses-box-footer {
+        padding: 18px 0 0;
+    }
+
+    .single-courses-box:hover,
+    .single-courses-box:focus {
+        -webkit-transform: translateY(-10px);
+        transform: translateY(-10px);
+    }
+
+    .single-courses-box:hover .courses-image .courses-tag,
+    .single-courses-box:focus .courses-image .courses-tag {
+        background-color: #0eb582;
+    }
+
+    .single-courses-box:hover .courses-image .courses-tag a,
+    .single-courses-box:focus .courses-image .courses-tag a {
+        color: #fff;
+    }
+</style>
 <script>
     $(document).ready(function () {
         $("#ddlCategory").change(function () {
