--- a/app_teachers/templates/manage/course/list.html
+++ b/app_teachers/templates/manage/course/list.html
@@ -20,6 +20,20 @@
                                 <i class="fas fa-add"></i>
                                 Create New Course</a>
                         </p>
+                      
+                    </div>
+                </div>
+            </div>
+
+            <div class="row align-items-center mb-2">
+               
+
+                <div class="col-md-4 offset-md-1">
+                    <div class="topbar-search">
+                        <form method="get" action="#">
+                            <input type="text" placeholder="Search courses" class="form-control">
+                            <label><i class="fa fa-search"></i></label>
+                        </form>
                     </div>
                 </div>
             </div>
