filter courses teacher

--- a/app_teachers/templates/manage/course/list.html
+++ b/app_teachers/templates/manage/course/list.html
@@ -30,8 +30,8 @@
 
                 <div class="col-md-4 offset-md-1">
                     <div class="topbar-search">
-                        <form method="get" action="#">
-                            <input type="text" placeholder="Search courses" class="form-control">
+                        <form method="get" action=".">
+                            <input type="text" name="q" placeholder="Search courses" class="form-control">
                             <label><i class="fa fa-search"></i></label>
                         </form>
                     </div>
