--- a/app_teachers/templates/manage/course/_video.html
+++ b/app_teachers/templates/manage/course/_video.html
@@ -19,6 +19,13 @@
                             <label for="formControlVideoURL">Video URL</label>
                             <input type="text" class="form-control" name="video" value="{{ fields.video }}"/>
                         </div>
+
+                        <div class="form-group">
+                            <label for="formControlVideou"> Or </label>
+                            <div>
+                                <a href="javascript:;" class="btn btn-info link-upload-video">Upload Video</a>
+                            </div>
+                        </div>
                     
                     </form>
                 </div>
@@ -32,5 +39,8 @@
                 </div>
             </div>
         </div>
+
+     
+
     </script>
 {% endverbatim %}
