--- a/app_teachers/templates/teacher_base.html
+++ b/app_teachers/templates/teacher_base.html
@@ -87,6 +87,12 @@
                                        Edit Profile
                                     </a>
                                 </li>
+
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'logout' %}">
+                                       Logout
+                                    </a>
+                                </li>
                             </ul>
                           
                         </div>
