--- a/courses/templates/courses/course/detail.html
+++ b/courses/templates/courses/course/detail.html
@@ -1,6 +1,7 @@
 {% extends 'app_base.html' %}
 {% load staticfiles %}
 {% load course_tags %}
+{% load course %}
 
 {% block title %}Enroll Online
     {{ object.title }}
@@ -69,60 +70,54 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8">
-                    <nav class="course-single-tabs">
-                        <div class="nav nav-tabs" id="nav-tab" role="tablist">
-                            <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">Overview</a>
-                            <a class="nav-item nav-link" id="nav-topics-tab" data-toggle="tab" href="#nav-topics" role="tab" aria-controls="nav-profile" aria-selected="false">
-                                Learning Outcomes
-                            </a>
-                            <a class="nav-item nav-link" id="nav-instructor-tab" data-toggle="tab" href="#nav-instructor" role="tab" aria-controls="nav-contact" aria-selected="false">
-                                Completion Requirements
-                            </a>
-                            <a class="nav-item nav-link" id="nav-feedback-tab" data-toggle="tab" href="#nav-feedback" role="tab" aria-controls="nav-contact" aria-selected="false">Schedule</a>
+
+                    {% if object.video %}
+                        <div class="single-course-details mb-5">
+                            <div id="videoTag" data-value="{{ object.video }}"></div>
                         </div>
-                    </nav>
-                    <div class="tab-content" id="nav-tabContent">
-                        <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
-                            <div class="single-course-details ">
-                                <h4 class="course-title">Description</h4>
-                                <p>
-                                    {{ object.overview }}
-                                </p>
+                    {% endif %}
 
-                                {% if object.features.first.notes %}
-                                    <div class="course-widget bg-light p-3 mt-5">
-                                        <h4 class="course-title">Course Notes:</h4>
-                                        <div>
-                                            {{ object.features.first.notes | safe }}
-                                        </div>
-                                    </div>
-                                {% endif %}
+                    <div class="single-course-details mb-5">
+                        <h4 class="course-title">Description</h4>
+                        <p>
+                            {{ object.overview }}
+                        </p>
+                    </div>
 
-
+                    {% if object.features.first.notes %}
+                        <div class="single-course-details mb-5">
+                            <h4 class="course-title">Course Notes:</h4>
+                            <div>
+                                {{ object.features.first.notes | safe }}
                             </div>
                         </div>
-                        <div
-                            class="tab-pane fade" id="nav-topics" role="tabpanel" aria-labelledby="nav-topics-tab">
-                            <!--  Course Topics -->
-                            <div class="edutim-single-course-segment  edutim-course-topics-wrap">
+                    {% endif %}
 
-                                <div class="edutim-course-topics-contents">
-                                    <div class="edutim-course-topic ">
-                                        {{ object.features.first.outcomes  |safe }}
-                                    </div>
-                                </div>
-                            </div>
-                            <!--  COurse Topics End -->
-                        </div>
-                        <div class="tab-pane fade" id="nav-instructor" role="tabpanel" aria-labelledby="nav-instructor-tab">
-                            {{ object.features.first.completion_requirements  |safe }}
-                        </div>
-                        <div class="tab-pane fade" id="nav-feedback" role="tabpanel" aria-labelledby="nav-feedback-tab">
-                            <div class="course-widget">
-                                {{ object.features.first.schedule | safe }}
-                            </div>
+                    <div class="single-course-details mb-5">
+                        <h4 class="course-title">
+                            Learning Outcomes:</h4>
+                        <div>
+                            {{ object.features.first.outcomes  |safe }}
                         </div>
                     </div>
+
+                    <div class="single-course-details mb-5">
+                        <h4 class="course-title">
+                            Completion Requirements:</h4>
+                        <div>
+                            {{ object.features.first.completion_requirements  |safe }}
+                        </div>
+                    </div>
+
+                    <div class="single-course-details mb-5">
+                        <h4 class="course-title">
+                            Schedule:</h4>
+                        <div>
+                            {{ object.features.first.schedule  |safe }}
+                        </div>
+                    </div>
+
+
                 </div>
                 <div class="col-lg-4">
                     <div class="course-sidebar">
@@ -159,6 +154,7 @@
 
                                 <div class="buy-btn">
 
+
                                     {% if object.is_free %}
                                         {% if request.user.is_authenticated %}
                                             <a href="javascript:;" class="btn btn-main btn-block link-free-enroll">
@@ -172,7 +168,7 @@
 
                                     {% else %}
 
-                                        <a href="javascript:;" class="btn btn-main btn-block link-add-cart">
+                                        <a href="javascript:;" data-subject="{{ subject.title }}" data-json="{{ object|jsonify }}" class="btn btn-main btn-block link-add-cart">
                                             Add To Cart
                                         </a>
 
@@ -263,6 +259,27 @@
     </section>
 
     {% endwith %}
+
+
+    {% verbatim %}
+        <script type="text/x-handlebars-template" id="videoLocalItemTemplate">
+            <div class="embed-responsive embed-responsive-16by9">
+                <video class="embed-responsive-item">
+                    <source src="{{ src }}" type="video/mp4"/>
+                    Your browser does not support the video tag.
+                </video>
+            </div>
+        </script>
+
+        <script type="text/x-handlebars-template" id="videoEmbedItemTemplate">
+            <div class="embed-responsive embed-responsive-16by9">
+                <iframe class="embed-responsive-item" src="{{ src }}" allowfullscreen></iframe>
+            </div>
+        </script>
+
+
+    {% endverbatim %}
+
 {% endblock %}
 
 
@@ -286,7 +303,7 @@
 
                 };
 
-                var enrollCourse = function () { // ShowLoadingModal("Please wait", "Processing request");
+                var enrollCourse = function () {
 
                     var formData = {
                         course: '{{ object.id }}'
@@ -317,17 +334,59 @@
 
                 };
 
+                var videoEmbeder = function () {
+
+                    var videoSrc = $("#videoTag").attr('data-value');
+
+                    if (videoSrc) {
+
+                        var item = {
+                            src: videoSrc
+                        };
+
+                        
+                        var source = document.getElementById("videoLocalItemTemplate").innerHTML;
+
+                        if(isValidURL(videoSrc)){
+                            source = document.getElementById("videoEmbedItemTemplate").innerHTML;
+                        }
+
+                        var template = Handlebars.compile(source);
+                        $("#videoTag").html(template(item));
+
+                    }
+                };
+
+                var isValidURL = function (str) {
+                    var pattern = new RegExp('^(https?:\\/\\/)?' + // protocol
+                            '((([a-z\\d]([a-z\\d-]*[a-z\\d])*)\\.)+[a-z]{2,}|' + // domain name
+                            '((\\d{1,3}\\.){3}\\d{1,3}))' + // OR ip (v4) address
+                            '(\\:\\d+)?(\\/[-a-z\\d%_.~+]*)*' + // port and path
+                            '(\\?[;&a-z\\d%_.~+=-]*)?' + // query string
+                            '(\\#[-a-z\\d_]*)?$', 'i'); // fragment locator
+                    return !! pattern.test(str);
+                };
+
                 var registerEvent = function () {
 
                     $("div").on("click", '.link-free-auth', function (e) {
                         e.stopPropagation();
-                        Swal.fire({title: 'You are not logged in. ', showDenyButton: true, confirmButtonText: 'Log in', denyButtonText: 'Create a new account'}).then((result) => {
+
+                        var opts = {
+                            title: 'You are not logged in. ',
+                            showDenyButton: true,
+                            confirmButtonText: 'Log in',
+                            denyButtonText: 'Create a new account'
+                        };
+
+                        Swal.fire(opts).then((result) => {
                             if (result.isConfirmed) {
-                                window.location.href = "{% url 'login' %}?next=       {{ request.path }}";
+                                window.location.href = "{% url 'login' %}?next=" + "{{ request.path }}";
                             } else if (result.isDenied) {
-                                window.location.href = "{% url 'student_registration' %}?next=       {{ request.path }}";
+                                window.location.href = "{% url 'student_registration' %}?next=" +"{{ request.path }}";
                             }
                         });
+
                     });
 
                     $("div").on("click", '.link-free-enroll', function (e) {
@@ -342,6 +401,7 @@
                 var init = function () {
                     registerEvent();
                     loadMessage();
+                    videoEmbeder();
                 };
 
                 init();
