--- a/courses/templates/index.html
+++ b/courses/templates/index.html
@@ -43,7 +43,7 @@
                                 </div>
                                 <div class="feature-text">
                                     <h4>
-                                        Engineers and Architects PDHs
+                                        Money back guarantee
                                     </h4>
                                 </div>
                             </div>
@@ -56,7 +56,8 @@
                                     <i class="bi bi-article"></i>
                                 </div>
                                 <div class="feature-text">
-                                    <h4>IACET CEUs Credits
+                                    <h4>
+                                        IACET CEUs Credits
                                     </h4>
                                 </div>
                             </div>
@@ -68,7 +69,9 @@
                                     <i class="bi bi-headset"></i>
                                 </div>
                                 <div class="feature-text">
-                                    <h4>Safety Professionals</h4>
+                                    <h4>
+                                        Easy to take classes
+                                    </h4>
                                 </div>
                             </div>
                         </div>
@@ -80,7 +83,9 @@
                                     <i class="bi bi-rocket2"></i>
                                 </div>
                                 <div class="feature-text">
-                                    <h4>CSP, ASP, CHST</h4>
+                                    <h4>
+                                        Two years of use for each class  
+                                    </h4>
                                 </div>
                             </div>
                         </div>
