--- a/app_teachers/templates/course_detail/index.html
+++ b/app_teachers/templates/course_detail/index.html
@@ -1,6 +1,7 @@
 {% extends 'teacher_base.html' %}
 {% load staticfiles %}
-{% block title %}View Course
+{% block title %}
+Course - {{object.title}}
 {% endblock %}
 
 {% block nav %}
