--- a/app_teachers/templates/manage/module/content_list.html
+++ b/app_teachers/templates/manage/module/content_list.html
@@ -2,7 +2,7 @@
 {% load course %}
 
 {% block title %}
-    {{ module.title }}
+   Lessons for {{ module.title }}
     -
     {{ module.course }}
 {% endblock %}
