--- a/app_students/templates/student_home.html
+++ b/app_students/templates/student_home.html
@@ -33,7 +33,7 @@
                                             Courses Enrolled -  {{request.user.course_enrolled.count}}
                                         </h4>
                                         <p>
-                                            <a href="#" class="btn btn-main-2">
+                                            <a href="{% url 'student_courses' %}" class="btn btn-main-2">
                                                 <i class="fab fa-buromobelexperte mr-2"></i>
                                                 View</a>
                                         </p>
